Fixed button text overlapping.

--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@
     display: none;
   }
   .btn-main {
-    width: 40%;
+    width: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
