--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -192,7 +192,7 @@
     }
 
     .btn-main {
-        width: 40%;
+        width: 50%;
         display: flex;
         button {
             cursor: pointer;
